--- a/module-3/02_CSS_Selectors/exercise-student/style.css
+++ b/module-3/02_CSS_Selectors/exercise-student/style.css
@@ -15,3 +15,106 @@ ul {
   margin: 0;
   padding: 0;
 }
+
+
+
+aside {
+  position: fixed;
+  width: 200px;
+  border-right: 1px solid #00ADEE;
+  height: 100vh;
+}
+
+aside>img{
+  height: 120px;
+  display: block;
+  margin: 0 auto;
+
+}
+
+main {
+  display: block;
+  margin-left: 200px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+aside>nav>ul>li{
+  list-style: none;
+  text-align: center;
+  text-transform: uppercase;
+  margin: 10px auto;
+  padding-bottom: 10px;
+  width: 80%;
+  line-height: 2;
+  border-bottom: 1px solid rgba(0, 173, 238, 0.4);
+}
+
+aside>nav>ul>li>a{
+  font-weight: bold;
+  text-decoration: none;
+}
+
+a:hover{
+  text-decoration: underline;
+}
+
+main>header{
+  height:120px;
+}
+
+.banner {
+  display: block;
+  width: 100%;
+}
+
+main>header>img{
+  display: block;
+  height: 80%;
+}
+
+#what-we-do{
+  display: inline-block;
+  width: 33%;
+  vertical-align: text-top;
+  border-right: 1px solid rgba(170, 239, 135, 0.8);
+  margin-top: 20px;
+}
+
+#our-work{
+  display: inline-block;
+  width: 33%;
+  vertical-align: text-top;
+  padding-left: 20px;
+  border-right: 1px solid rgba(170, 239, 135, 0.8);
+  margin-top: 20px;
+}
+
+#contact-us{
+  display: inline-block;
+  width: 33%;
+  vertical-align: text-top;
+  padding-left: 20px;
+  margin-top: 20px;
+}
+
+section>div>h2{
+  color: #8CC36F;
+}
+
+section>div>h2>i{
+  margin-right: 10px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
