--- a/module-3/03_CSS_Grid/exercise-student/style.css
+++ b/module-3/03_CSS_Grid/exercise-student/style.css
@@ -50,3 +50,99 @@ header img {
 #student-picture img{
     border-radius: 50%;
 }
+
+/* Layout */
+#headline {
+    grid-area: headline;
+}
+#student-quote {
+    grid-area: quote;
+}
+#student-profile {
+    grid-area: profile;
+}
+#student-picture {
+    grid-area: picture;
+    text-align: center;
+}
+#student-contact {
+    grid-area: contact;
+    text-align: center;
+}
+#experience-code {
+    grid-area: code;
+}
+#experience-database {
+    grid-area: database;
+}
+#experience-web {
+    grid-area: web;
+}
+#experience-design {
+    grid-area: design;
+}
+
+#main-grid {
+    display: grid;
+    gap: 20px 50px;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-areas:
+            "headline headline picture"
+            "quote quote picture"
+            "profile profile contact"
+            "experience experience experience";
+    align-items: center;
+}
+
+#experience-grid {
+    grid-area: experience;
+    display: grid;
+    gap: 20px 50px;
+    grid-template-columns: 1fr 1fr;
+    grid-template-areas:
+            "code code"
+            "database database"
+            "web design";
+}
+
+/* layout 2 / tablet */
+@media (max-width: 1024px) {
+    #main-grid {
+        grid-column-gap: 35px;
+        grid-template-columns: 1fr 1fr;
+        grid-template-areas:
+            "headline headline"
+            "quote picture"
+            "quote contact"
+            "profile profile"
+            "experience experience";
+    }
+    #experience-grid {
+        gap: 20px;
+        grid-template-areas:
+            "code web"
+            "database design";
+    }
+}
+
+/* layout 3 / mobile */
+@media (max-width: 450px) {
+    #main-grid {
+        grid-template-columns: 100%;
+        grid-template-areas:
+            "headline"
+            "picture"
+            "contact"
+            "quote"
+            "profile"
+            "experience";
+    }
+    #experience-grid {
+        grid-template-columns: 100%;
+        grid-template-areas:
+            "code"
+            "web"
+            "database"
+            "design";
+    }
+}
