--- a/module-3/04_Flexbox/exercise-student/mini-exercises/align-content-column/step-3/main.css
+++ b/module-3/04_Flexbox/exercise-student/mini-exercises/align-content-column/step-3/main.css
@@ -16,3 +16,9 @@ body {
   color: #fff;
   border: solid 1px #777;
 }
+
+.container{
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-start;
+}
