--- a/module-3/04_Flexbox/exercise-student/portfolio/css/main.css
+++ b/module-3/04_Flexbox/exercise-student/portfolio/css/main.css
@@ -1,19 +1,29 @@
 body {
+  display: flex;
   margin: 0;
   padding: 0;
   min-height: 100vh;
   /* Photo by Andre Furtado on Unsplash */
   background: url(../img/andre-furtado-JtV6zyOZSrA-unsplash.jpg) left / cover no-repeat;
+  
 }
 
 #left-panel {
+  display: flex;
   background-color: #F7F7F7;
+  flex-wrap: wrap;
+  flex-basis: 35%;
 }
 
 ul.social-icons {
   list-style-type: none;
   margin: 20px 20px;
   padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  flex-basis: 50%;
+  
 }
 
 nav {}
@@ -126,4 +136,6 @@ nav a:hover {
   #right-panel {
     display: none;
   }
+
+  
 }
